# rust_tm_api

./: Cargo.toml
endpoints/: config.rs  health.rs  leaderboard.rs  mod.rs  players.rs  tracks.rs
models/: player.rs
src/: main.rs  swagger.rs
src/endpoints/: config.rs  health.rs  leaderboard.rs  players.rs  tracks.rs
src/models/: track.rs
