[package]
name = "tm_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = ["axum"] }
axum = { version = "0.7.5" }
axum-swagger-ui = "0.3.0"
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.3" }
hyper = { version = "1.3.1", features = ["full"] }
log = { version = "0.4.20" }
schemars = "0.8.21"
serde = "1.0.203"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
utoipa-swagger-ui = "7"
